src/test/index.test.js
import { describe, it } from 'vitest';
import Konva from 'konva';

describe('', () => {
  it('', () => {
    new Konva.Stage(); // error
    new Konva.Layer(); // error
    new Konva.Rect(); // pass
  });
});
